Fixed bug with menu

--- a/app/index.html
+++ b/app/index.html
@@ -37,32 +37,28 @@
                                                                                                       <div class="v-nav__logo-content"><img class="v-nav__logo-content-img" src="img/logo.png" alt="" role="presentation"/>
                                                                                                       </div>
                                                                                     </div>
-                                                                                    <nav class="v-nav__menu v-col-12 v-col-md-6" id="navigation"><ul>
-                                                                                                      <li class="v-nav__menu-item"><a href="index.html">Link_1</a>
+                                                                                    <nav class="v-nav__menu v-col-12 v-col-md-9" id="navigation"><ul>
+                                                                                                      <li class="v-nav__menu-item"><a href="#section-consultation">Что будет на консультации</a>
                                                                                                       </li>
-                                                                                                      <li class="v-nav__menu-item"><a href="index2.html">Link 2</a>
+                                                                                                      <li class="v-nav__menu-item"><a href="#section-about">О нас</a>
                                                                                                       </li>
-                                                                                                      <li class="v-nav__menu-item"><a href="index3.html">Link 3</a>
+                                                                                                      <li class="v-nav__menu-item"><a href="#section-review">Отзывы родителей</a>
                                                                                                       </li>
                                                                                                       <li class="v-nav__menu-item">
-                                                                                                                    <button class="v-btn v-btn_navigation" data-action="vmodal" data-open="#form">Button
+                                                                                                                    <button class="v-btn v-btn_navigation v-effect v-effect_bounce-top" data-action="vmodal" data-open="#form">Записаться на консультацию
                                                                                                                     </button>
                                                                                                       </li>
                                                                                     </nav>
-                                                                                    <div class="v-nav__addition v-col-4 v-col-md-3" id="js-vnav-addition">
-                                                                                                      <div class="v-nav__addition-toggle" id="js-vnav-toggle"><span></span><span></span><span></span>
-                                                                                                      </div>
-                                                                                                      <div class="v-nav__addition-links v-js-vnav-links"><a class="v-nav__addition-link">+99 999 999 99</a><a class="v-nav__addition-link v-nav__addition-link_hidden">+99 999 999 99</a>
-                                                                                                      </div>
-                                                                                    </div>
                                                                   </div>
                                                 </div>
                               </div>
                 </div>
     <div class="site" id="page">
                         <header class="v-site-header">
-                                                  <div class="v-site-header__container">
-                                                  </div>
+                          <div class="v-container">
+                                              <h1 class="v-title-lg">Среднее<br>образование в <span class="flag">Польше</span>
+                                              </h1>
+                          </div>
                         </header>
       <div class="site-content" id="content">
       </div>
