--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
         <link href="//fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;amp;subset=cyrillic" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <script src="js/vanilla.main.js"></script>
-        <script src="js/bundle.js"></script>
         <title>Main File</title>
         <meta name="application-name" content="Main File">
         <meta property="og:title" content="Main File">
@@ -27,7 +26,7 @@
   </head>
   <body>
                 <div class="v-fixed v-fixed_md-top">
-                              <div class="v-nav v-nav_style">
+                              <div class="v-nav v-nav_style" id="js-wrapper-navigation">
                                                 <div class="v-nav__container v-container">
                                                                   <div class="v-nav__row v-row v-flex v-flex_y-center">
                                                                                     <div class="v-nav__logo v-col-8 v-col-md-3">
@@ -37,7 +36,7 @@
                                                                                                       <div class="v-nav__logo-content"><img class="v-nav__logo-content-img" src="img/logo.png" alt="" role="presentation"/>
                                                                                                       </div>
                                                                                     </div>
-                                                                                    <nav class="v-nav__menu v-col-12 v-col-md-9" id="navigation"><ul>
+                                                                                    <nav class="v-nav__menu v-col-12 v-col-md-9" id="js-navigation"><ul>
                                                                                                       <li class="v-nav__menu-item"><a href="#section-consultation">Что будет на консультации</a>
                                                                                                       </li>
                                                                                                       <li class="v-nav__menu-item"><a href="#section-about">О нас</a>
@@ -55,6 +54,8 @@
                 </div>
     <div class="site" id="page">
                         <header class="v-site-header">
+                                                  <div class="v-quadro"><span class="v-quadro__part v-quadro__part_1"></span><span class="v-quadro__part v-quadro__part_2"></span><span class="v-quadro__part v-quadro__part_3"></span><span class="v-quadro__part v-quadro__part_4"></span><span class="v-quadro__part v-quadro__part_5"></span><span class="v-quadro__part v-quadro__part_6"></span><span class="v-quadro__part v-quadro__part_7"></span><span class="v-quadro__part v-quadro__part_8"></span><span class="v-quadro__part v-quadro__part_9"></span>
+                                                  </div>
                           <div class="v-container">
                                                     <div class="v-site-header__row v-row">
                                                       <div class="v-col-12 v-col-sm-7">
@@ -79,22 +80,24 @@
                                                       </div>
                                                       <div class="v-col-12 v-col-sm-5 v-col-md-4">
                                                                           <div class="v-shadow">
-                                                                                                    <p class="v-shadow__title">Запишитесь на<span class="color-brand-2">бесплатную консультацию</span>и мы предварительно оценим шансы Вашего ребенка на поступление
+                                                                                                    <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
                                                                                                     </p>
-                                                                                              <form class="v-form v-form_block" action="mail.php" method="POST">
-                                                                                                                        <div class="v-form__content">
-                                                                                                                                                  <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+                                                                                                    <div class="v-shadow__content">
+                                                                                                                        <form class="v-form v-form_block" action="mail.php" method="POST">
+                                                                                                                                                  <div class="v-form__content">
+                                                                                                                                                                            <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+                                                                                                                                                                            </div>
+                                                                                                                                                                            <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
+                                                                                                                                                                            </div>
+                                                                                                                                                                            <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
+                                                                                                                                                                            </div>
+                                                                                                                                                                            <div class="v-form__row">
+                                                                                                                                                                                                      <button class="v-form__submit v-btn v-btn_brand-1 v-btn_shadow-brand-1 v-btn_size-fluid" type="submit">Проконсультироваться<br>бесплатно
+                                                                                                                                                                                                      </button>
+                                                                                                                                                                            </div>
                                                                                                                                                   </div>
-                                                                                                                                                  <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
-                                                                                                                                                  </div>
-                                                                                                                                                  <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
-                                                                                                                                                  </div>
-                                                                                                                                                  <div class="v-form__row">
-                                                                                                                                                                            <button class="v-form__submit v-vbtn v-vbtn_color-brand-1" type="submit">Проконсультироваться<br>бесплатно
-                                                                                                                                                                            </button>
-                                                                                                                                                  </div>
-                                                                                                                        </div>
-                                                                                              </form>
+                                                                                                                        </form>
+                                                                                                    </div>
                                                                           </div>
                                                       </div>
                                                     </div>
