Changed Component Quadro

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
                 </div>
     <div class="site" id="page">
                         <header class="v-site-header">
-                                                  <div class="v-quadro"><span class="v-quadro__part v-quadro__part_1"></span><span class="v-quadro__part v-quadro__part_2"></span><span class="v-quadro__part v-quadro__part_3"></span><span class="v-quadro__part v-quadro__part_4"></span><span class="v-quadro__part v-quadro__part_5"></span><span class="v-quadro__part v-quadro__part_6"></span><span class="v-quadro__part v-quadro__part_7"></span><span class="v-quadro__part v-quadro__part_8"></span><span class="v-quadro__part v-quadro__part_9"></span>
+                                                  <div class="v-quadro v-quadro_style-1 v-site-header__quadro"><span class="v-quadro__part v-quadro__part_1"></span><span class="v-quadro__part v-quadro__part_2"></span><span class="v-quadro__part v-quadro__part_3"></span><span class="v-quadro__part v-quadro__part_4"></span><span class="v-quadro__part v-quadro__part_5"></span><span class="v-quadro__part v-quadro__part_6"></span><span class="v-quadro__part v-quadro__part_7"></span><span class="v-quadro__part v-quadro__part_8"></span><span class="v-quadro__part v-quadro__part_9"></span>
                                                   </div>
                           <div class="v-container">
                                                     <div class="v-site-header__row v-row">
@@ -92,7 +92,7 @@
                                                                                                                                                                             <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
                                                                                                                                                                             </div>
                                                                                                                                                                             <div class="v-form__row">
-                                                                                                                                                                                                      <button class="v-form__submit v-btn v-btn_brand-1 v-btn_shadow-brand-1 v-btn_size-fluid" type="submit">Проконсультироваться<br>бесплатно
+                                                                                                                                                                                                      <button class="v-form__submit v-btn v-btn_brand-1 v-btn_shadow-brand-1 v-btn_size-fluid v-effect v-effect_bounce-top" type="submit">Проконсультироваться<br>бесплатно
                                                                                                                                                                                                       </button>
                                                                                                                                                                             </div>
                                                                                                                                                   </div>
