--- a/app/index.html
+++ b/app/index.html
@@ -29,14 +29,14 @@
                               <div class="v-nav v-nav_style" id="js-wrapper-navigation">
                                                 <div class="v-nav__container v-container">
                                                                   <div class="v-nav__row v-row v-flex v-flex_y-center">
-                                                                                    <div class="v-nav__logo v-col-8 v-col-md-3">
+                                                                                    <div class="v-nav__logo v-col-8 v-col-md-2">
                                                                                                   <button class="v-hamburger v-hamburger_effect-1" type="button" id="js-vnav__btn"><span class="v-hamburger__lines"><span>Line1</span><span>Line2</span><span>Line3</span></span>
                                                                                                     <!--+e.SPAN.text Menu-->
                                                                                                   </button>
                                                                                                       <div class="v-nav__logo-content"><img class="v-nav__logo-content-img" src="img/logo.png" alt="" role="presentation"/>
                                                                                                       </div>
                                                                                     </div>
-                                                                                    <nav class="v-nav__menu v-col-12 v-col-md-9" id="js-navigation"><ul>
+                                                                                    <nav class="v-nav__menu v-col-12 v-col-md-10" id="js-navigation"><ul>
                                                                                                       <li class="v-nav__menu-item"><a href="#section-consultation">Что будет на консультации</a>
                                                                                                       </li>
                                                                                                       <li class="v-nav__menu-item"><a href="#section-about">О нас</a>
@@ -80,8 +80,10 @@
                                                       </div>
                                                       <div class="v-col-12 v-col-sm-5 v-col-md-4">
                                                                           <div class="v-shadow">
-                                                                                                    <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
-                                                                                                    </p>
+                                                                                                    <div class="v-shadow__header">
+                                                                                                                              <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
+                                                                                                                              </p>
+                                                                                                    </div>
                                                                                                     <div class="v-shadow__content">
                                                                                                                         <form class="v-form v-form_block" action="mail.php" method="POST">
                                                                                                                                                   <div class="v-form__content">
@@ -104,6 +106,92 @@
                           </div>
                         </header>
       <div class="site-content" id="content">
+                                <section class="v-section v-bonus">
+                                  <div class="v-container">
+                                                            <h3 class="v-title-md v-title-section"><span class="v-color-brand-2">Получите бонус </span>за быструю заявку
+                                                            </h3>
+                                    <div class="v-row">
+                                      <div class="v-col-12 v-col-sm-5 v-col-md-4">
+                                                                        <div class="v-bonus__img"><img src="img/bonus.png">
+                                                                        </div>
+                                      </div>
+                                      <div class="v-col-12 v-col-sm-7 v-col-md-8">
+                                                                        <div class="v-bonus__content">
+                                                                          <p class="v-offset-static-xs bold">Оставьте заявку в течении 10 минут и <span class="v-color-brand-2">получите бесплатное руководство </span>с ответами на популярные вопросы</p>
+                                                                                                  <ul class="v-list v-list_flag">
+                                                                                                    <li>Реально ли среднее образование в Польше доступно и почему?</li>
+                                                                                                    <li>Какие нюансы стоит учесть перед отправкой ребенка на учебу?</li>
+                                                                                                    <li>Где ребенок будет жить, как питаться? Сколько это стоит в месяц?</li>
+                                                                                                    <li>Как быстрее всего выучить польский язык?</li>
+                                                                                                    <li>Есть ли вступительные экзамены? Какие?</li>
+                                                                                                    <li>Что делать, если ребенок заболел?</li>
+                                                                                                  </ul>
+                                                                        </div>
+                                        <div class="v-row">
+                                          <div class="v-col-12 v-col-md-6"></div>
+                                          <div class="v-col-12 v-col-md-6">
+                                                                    <div class="v-shadow">
+                                                                                                      <div class="v-shadow__content">
+                                                                                                                                <form class="v-form v-form_block" action="mail.php" method="POST">
+                                                                                                                                                                  <div class="v-form__content">
+                                                                                                                                                                                                    <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                    <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                    <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                    <div class="v-form__row">
+                                                                                                                                                                                                                                      <button class="v-form__submit v-btn v-btn_brand-1 v-btn_shadow-brand-1 v-btn_size-lg v-btn_size-fluid v-effect v-effect_bounce-top" type="submit">Получить руководство
+                                                                                                                                                                                                                                      </button>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                  </div>
+                                                                                                                                </form>
+                                                                                                      </div>
+                                                                    </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </section>
+                                <section class="v-section v-study">
+                                  <div class="v-container">
+                                                            <div class="v-shadow v-shadow_large v-shadow_ukraine-map">
+                                                                                              <div class="v-shadow__header">
+                                                                                                                                <p class="v-shadow__subtitle">Мы движемся в Европу и всё такое…
+                                                                                                                                </p>
+                                                                                                                                <h3 class="v-shadow__title v-title-md">Но пока <span class="v-color-brand-2">украинское образование</span> - это:
+                                                                                                                                </h3>
+                                                                                              </div>
+                                                              <div class="v-row">
+                                                                                                <div class="v-icon v-icon_center v-col-12 v-col-sm-4">
+                                                                                                                                  <div class="v-icon__inner">
+                                                                                                                                                                    <div class="v-icon__header"><img class="v-icon__img" src="img/icon-study-1.png" alt="" role="presentation"/>
+                                                                                                                                                                    </div>
+                                                                                                                                                                    <div class="v-icon__body"><span class="bold">Сплошная теория</span>, которая безнадежно устарела еще 15 лет назад
+                                                                                                                                                                    </div>
+                                                                                                                                  </div>
+                                                                                                </div>
+                                                                                                <div class="v-icon v-icon_center v-col-12 v-col-sm-4">
+                                                                                                                                  <div class="v-icon__inner">
+                                                                                                                                                                    <div class="v-icon__header"><img class="v-icon__img" src="img/icon-study-2.png" alt="" role="presentation"/>
+                                                                                                                                                                    </div>
+                                                                                                                                                                    <div class="v-icon__body"><span class="bold">Диплом</span>, который НЕ дает возможности работать где-то, кроме Украины
+                                                                                                                                                                    </div>
+                                                                                                                                  </div>
+                                                                                                </div>
+                                                                                                <div class="v-icon v-icon_center v-col-12 v-col-sm-4">
+                                                                                                                                  <div class="v-icon__inner">
+                                                                                                                                                                    <div class="v-icon__header"><img class="v-icon__img" src="img/icon-study-3.png" alt="" role="presentation"/>
+                                                                                                                                                                    </div>
+                                                                                                                                                                    <div class="v-icon__body"><span class="bold">Коррупция</span>, взяточничество и бюрократия в чистом виде
+                                                                                                                                                                    </div>
+                                                                                                                                  </div>
+                                                                                                </div>
+                                                              </div>
+                                                            </div>
+                                  </div>
+                                </section>
       </div>
                         <footer class="v-site-footer" id="colophon">
                                                   <div class="v-site-footer__container">
