Add Section Review Video & Bounus

--- a/app/index.html
+++ b/app/index.html
@@ -541,13 +541,13 @@
                                   <div class="v-container">
                                                                     <div class="v-review__shadow v-shadow">
                                                                                                       <div class="v-shadow__header">
-                                                                                                                                        <h3 class="v-shadow__title v-title-md"><span class="v-color-brand-2">Отзывы родителей </span>счастливых <br>польских учеников из Украины
-                                                                                                                                        </h3>
+                                                                                                                                <h3 class="v-title-md v-offset-static-md"><span class="v-color-brand-2">Отзывы родителей </span>счастливых <br>польских учеников из Украины
+                                                                                                                                </h3>
                                                                                                       </div>
                                                                       <div class="v-row">
                                                                                                         <div class="v-review-item v-col-12 v-col-sm-6">
                                                                                                                                           <div class="v-review-item__content">
-                                                                                                                                            <p>Мы отправили своего ребенка учиться в Польшу после 7-го класса. Компания “Освита Маркет” очень помогла нам в коммуникации с преподавательским составом, в размещении ребенка. Через представителей компании мы всегда оперативно узнавали о проблемах в учебе, если таковые возникали.</p>
+                                                                                                                                            <p>Мы отправили своего ребенка учиться в Польшу после 9-го класса. Компания “Освита Маркет” очень помогла нам в коммуникации с преподавательским составом, в размещении ребенка. Через представителей компании мы всегда оперативно узнавали о проблемах в учебе, если таковые возникали.</p>
                                                                                                                                             <p>Было приятно, что поляки хорошо относятся к нашим детям, во всем помогают. Очень редко бывает, что дети попадают в разные неприятные ситуации, так как за ними постоянно присматривают учителя, воспитатели и психологи. Дети привыкают к самостоятельной жизни!</p>
                                                                                                                                           </div>
                                                                                                                                           <div class="v-review-item__footer">
@@ -603,7 +603,7 @@
                                                                                                         </div>
                                                                                                         <div class="v-review-item v-col-12 v-col-sm-6">
                                                                                                                                           <div class="v-review-item__content">
-                                                                                                                                            <p>Мы отправили дочь в Польшу после 8-го класса и очень переживали, что ребенок в столь ЮНОМ возрасте остался без опеки родителей, да еще и в другой стране…</p>
+                                                                                                                                            <p>Мы отправили дочь в Польшу после 9-го класса и очень переживали, что ребенок в столь ЮНОМ возрасте остался без опеки родителей, да еще и в другой стране…</p>
                                                                                                                                             <p>Однако, нас очень удивило прекрасное отношение дирекции школы и опекунов школы как к детям, так и к нам - родителям.</p>
                                                                                                                                             <p>Безусловно, “Освита Маркет” очень помогла нам на всех этапах поступления и даже больше. Мы уже посоветовали Вашу компанию нашим друзьям, и некоторые даже уже заключили контракт с Вами.</p>
                                                                                                                                           </div>
@@ -661,6 +661,72 @@
                                                                                                         </div>
                                                                       </div>
                                                                     </div>
+                                  </div>
+                                </section>
+                                <section class="v-benefits v-benefits_children">
+                                                                  <div class="v-quadro v-quadro_style-1 v-benefits__quadro v-benefits__quadro_1"><span class="v-quadro__part v-quadro__part_1"></span><span class="v-quadro__part v-quadro__part_2"></span><span class="v-quadro__part v-quadro__part_3"></span><span class="v-quadro__part v-quadro__part_4"></span><span class="v-quadro__part v-quadro__part_5"></span><span class="v-quadro__part v-quadro__part_6"></span><span class="v-quadro__part v-quadro__part_7"></span><span class="v-quadro__part v-quadro__part_8"></span><span class="v-quadro__part v-quadro__part_9"></span>
+                                                                  </div>
+                                                                  <div class="v-quadro v-quadro_style-2 v-benefits__quadro v-benefits__quadro_2"><span class="v-quadro__part v-quadro__part_1"></span><span class="v-quadro__part v-quadro__part_2"></span><span class="v-quadro__part v-quadro__part_3"></span><span class="v-quadro__part v-quadro__part_4"></span><span class="v-quadro__part v-quadro__part_5"></span><span class="v-quadro__part v-quadro__part_6"></span><span class="v-quadro__part v-quadro__part_7"></span><span class="v-quadro__part v-quadro__part_8"></span><span class="v-quadro__part v-quadro__part_9"></span>
+                                                                  </div>
+                                  <div class="v-container">
+                                                            <h3 class="v-title-md v-title-section">Что говорят сами дети об учебе в Польше
+                                                            </h3>
+                                                                    <div class="v-benefits__video">
+                                                                                                      <iframe class="v-benefits__video-iframe" src="https://www.youtube.com/embed/F_JdFqhtoTY?rel=0&amp;amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+                                                                                                      </iframe>
+                                                                    </div>
+                                                            <div class="v-text-center">
+                                                                                      <button class="v-btn v-btn_size-lg v-btn_brand-1 v-btn_shadow-brand-1 v-effect v-effect_bounce-top" data-action="v-modal" data-open="#modal-form">Задать вопросы специалисту
+                                                                                      </button>
+                                                            </div>
+                                  </div>
+                                </section>
+                                <section class="v-section v-bonus">
+                                  <div class="v-container">
+                                                            <h3 class="v-title-md v-title-section"><span class="v-color-brand-2">Получите бонус </span>за быструю заявку
+                                                            </h3>
+                                    <div class="v-row">
+                                      <div class="v-col-12 v-col-sm-5 v-col-md-4">
+                                                                        <div class="v-bonus__img"><img src="img/bonus.png">
+                                                                        </div>
+                                      </div>
+                                      <div class="v-col-12 v-col-sm-7 v-col-md-8">
+                                                                        <div class="v-bonus__content">
+                                                                          <p class="v-offset-static-xs bold">Оставьте заявку в течении 10 минут и <span class="v-color-brand-2">получите бесплатное руководство </span>с ответами на популярные вопросы</p>
+                                                                                                  <ul class="v-list v-list_flag">
+                                                                                                    <li>Реально ли среднее образование в Польше доступно и почему?</li>
+                                                                                                    <li>Какие нюансы стоит учесть перед отправкой ребенка на учебу?</li>
+                                                                                                    <li>Где ребенок будет жить, как питаться? Сколько это стоит в месяц?</li>
+                                                                                                    <li>Как быстрее всего выучить польский язык?</li>
+                                                                                                    <li>Есть ли вступительные экзамены? Какие?</li>
+                                                                                                    <li>Что делать, если ребенок заболел?</li>
+                                                                                                  </ul>
+                                                                        </div>
+                                        <div class="v-row">
+                                          <div class="v-col-12 v-col-md-6"></div>
+                                          <div class="v-col-12 v-col-md-6">
+                                                                    <div class="v-shadow">
+                                                                                                      <div class="v-shadow__content">
+                                                                                                                                <form class="v-form v-form_block" action="mail.php" method="POST">
+                                                                                                                                                                  <div class="v-form__content">
+                                                                                                                                                                                                    <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                    <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                    <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                                                    <div class="v-form__row">
+                                                                                                                                                                                                                                      <button class="v-form__submit v-btn v-btn_brand-1 v-btn_shadow-brand-1 v-btn_size-lg v-btn_size-fluid v-effect v-effect_bounce-top" type="submit">Получить руководство
+                                                                                                                                                                                                                                      </button>
+                                                                                                                                                                                                    </div>
+                                                                                                                                                                  </div>
+                                                                                                                                </form>
+                                                                                                      </div>
+                                                                    </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
                                   </div>
                                 </section>
       </div>
