--- a/app/pug/sections/reviews.html
+++ b/app/pug/sections/reviews.html
@@ -3,13 +3,13 @@
   <div class="v-container">
     <div class="v-review__shadow v-shadow">
       <div class="v-shadow__header">
-        <h3 class="v-shadow__title v-title-md"><span class="v-color-brand-2">Отзывы родителей </span>счастливых <br/>польских учеников из Украины
+        <h3 class="v-title-md v-offset-static-md"><span class="v-color-brand-2">Отзывы родителей </span>счастливых <br/>польских учеников из Украины
         </h3>
       </div>
       <div class="v-row">
         <div class="v-review-item v-col-12 v-col-sm-6">
           <div class="v-review-item__content">
-            <p>Мы отправили своего ребенка учиться в Польшу после 7-го класса. Компания “Освита Маркет” очень помогла нам в коммуникации с преподавательским составом, в размещении ребенка. Через представителей компании мы всегда оперативно узнавали о проблемах в учебе, если таковые возникали.</p>
+            <p>Мы отправили своего ребенка учиться в Польшу после 9-го класса. Компания “Освита Маркет” очень помогла нам в коммуникации с преподавательским составом, в размещении ребенка. Через представителей компании мы всегда оперативно узнавали о проблемах в учебе, если таковые возникали.</p>
             <p>Было приятно, что поляки хорошо относятся к нашим детям, во всем помогают. Очень редко бывает, что дети попадают в разные неприятные ситуации, так как за ними постоянно присматривают учителя, воспитатели и психологи. Дети привыкают к самостоятельной жизни!</p>
           </div>
           <div class="v-review-item__footer">
@@ -65,7 +65,7 @@
         </div>
         <div class="v-review-item v-col-12 v-col-sm-6">
           <div class="v-review-item__content">
-            <p>Мы отправили дочь в Польшу после 8-го класса и очень переживали, что ребенок в столь ЮНОМ возрасте остался без опеки родителей, да еще и в другой стране…</p>
+            <p>Мы отправили дочь в Польшу после 9-го класса и очень переживали, что ребенок в столь ЮНОМ возрасте остался без опеки родителей, да еще и в другой стране…</p>
             <p>Однако, нас очень удивило прекрасное отношение дирекции школы и опекунов школы как к детям, так и к нам - родителям.</p>
             <p>Безусловно, “Освита Маркет” очень помогла нам на всех этапах поступления и даже больше. Мы уже посоветовали Вашу компанию нашим друзьям, и некоторые даже уже заключили контракт с Вами.</p>
           </div>
