--- a/app/pug/sections/review-video.html
+++ b/app/pug/sections/review-video.html
@@ -7,7 +7,9 @@
   <div class="v-container">
     <h3 class="v-title-md v-title-section">Что говорят сами дети об учебе в Польше
     </h3>
-    <div class="v-benefits__video v-offset-static-md">
+    <div class="v-benefits__video">
+      <iframe class="v-benefits__video-iframe" src="https://www.youtube.com/embed/F_JdFqhtoTY?rel=0&amp;amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="allowfullscreen">
+      </iframe>
     </div>
     <div class="v-text-center">
       <button class="v-btn v-btn_size-lg v-btn_brand-1 v-btn_shadow-brand-1 v-effect v-effect_bounce-top" data-action="v-modal" data-open="#modal-form">Задать вопросы специалисту
