Add map Section & Footer

--- a/app/pug/sections/reviews.html
+++ b/app/pug/sections/reviews.html
@@ -1,5 +1,5 @@
 
-<section class="v-review v-section">
+<section class="v-review v-section" id="section-review">
   <div class="v-container">
     <div class="v-review__shadow v-shadow">
       <div class="v-shadow__header">
