--- a/app/pug/sections/security.html
+++ b/app/pug/sections/security.html
@@ -1,5 +1,5 @@
 
-<section class="v-security">
+<section class="v-security" id="section-consultation">
   <div class="v-container">
     <h3 class="v-title-md v-title-section">Безопасность Вашего ребенка - прежде всего
     </h3><img class="v-security__image" src="img/icon-security.png" alt="" role="presentation"/>
