--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <meta name="format-detection" content="address=no">
         <link href="//fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;amp;subset=cyrillic" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <script src="js/lib/smooth-scroll.min.js"></script>
         <script src="js/vanilla.main.js"></script>
         <title>Main File</title>
         <meta name="application-name" content="Main File">
@@ -796,9 +797,9 @@
                         <div class="v-modal" id="modal-form">
                                                   <div class="v-modal__box v-modal__box_default">
                                                                             <div class="v-modal__header">
-                                                                                                      <p class="v-modal__title">Modal title
+                                                                                                      <p class="v-modal__title">Проконсультироваться бесплатно
                                                                                                       </p>
-                                                                                                      <button class="v-modal__close" data-close="vmodal">&times;
+                                                                                                      <button class="v-modal__close" data-close="v-modal">&times;
                                                                                                       </button>
                                                                             </div>
                                                                             <div class="v-modal__body">
@@ -824,7 +825,7 @@
                                                                             <div class="v-modal__header">
                                                                                                       <p class="v-modal__title">Политика конфиденциальности
                                                                                                       </p>
-                                                                                                      <button class="v-modal__close" data-close="vmodal">&times;
+                                                                                                      <button class="v-modal__close" data-close="v-modal">&times;
                                                                                                       </button>
                                                                             </div>
                                                                             <div class="v-modal__body">
@@ -837,7 +838,7 @@
                                                                             <div class="v-modal__header">
                                                                                                       <p class="v-modal__title">Отказ от ответственности
                                                                                                       </p>
-                                                                                                      <button class="v-modal__close" data-close="vmodal">&times;
+                                                                                                      <button class="v-modal__close" data-close="v-modal">&times;
                                                                                                       </button>
                                                                             </div>
                                                                             <div class="v-modal__body">
