--- a/app/pug/layout.html
+++ b/app/pug/layout.html
@@ -15,6 +15,7 @@
     <meta name="format-detection" content="address=no">
         <link href="//fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;amp;subset=cyrillic" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <script src="js/lib/smooth-scroll.min.js"></script>
         <script src="js/vanilla.main.js"></script>
   </head>
   <body>
