--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
     <meta name="format-detection" content="address=no">
         <link href="//fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;amp;subset=cyrillic" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <script src="js/lib/jquery.min.js"></script>
+        <script src="js/lib/jquery.cookies.2.2.0.js"></script>
+        <script src="js/lib/cookietimer.js"></script>
         <script src="js/lib/smooth-scroll.min.js"></script>
         <script src="js/vanilla.main.js"></script>
         <title>Main File</title>
@@ -129,7 +132,9 @@
                                                                                                   </ul>
                                                                         </div>
                                         <div class="v-row">
-                                          <div class="v-col-12 v-col-md-6"></div>
+                                          <div class="v-col-12 v-col-md-6">
+                                            <div id="timerContainer"></div>
+                                          </div>
                                           <div class="v-col-12 v-col-md-6">
                                                                     <div class="v-shadow">
                                                                                                       <div class="v-shadow__content">
@@ -395,7 +400,9 @@
                                                                                                   </ul>
                                                                         </div>
                                         <div class="v-row">
-                                          <div class="v-col-12 v-col-md-6"></div>
+                                          <div class="v-col-12 v-col-md-6">
+                                            <div id="timerContainer"></div>
+                                          </div>
                                           <div class="v-col-12 v-col-md-6">
                                                                     <div class="v-shadow">
                                                                                                       <div class="v-shadow__content">
@@ -704,7 +711,9 @@
                                                                                                   </ul>
                                                                         </div>
                                         <div class="v-row">
-                                          <div class="v-col-12 v-col-md-6"></div>
+                                          <div class="v-col-12 v-col-md-6">
+                                            <div id="timerContainer"></div>
+                                          </div>
                                           <div class="v-col-12 v-col-md-6">
                                                                     <div class="v-shadow">
                                                                                                       <div class="v-shadow__content">
