--- a/app/pug/sections/bonus.html
+++ b/app/pug/sections/bonus.html
@@ -21,7 +21,9 @@
           </ul>
         </div>
         <div class="v-row">
-          <div class="v-col-12 v-col-md-6"></div>
+          <div class="v-col-12 v-col-md-6">
+            <div id="timerContainer"></div>
+          </div>
           <div class="v-col-12 v-col-md-6">
             <div class="v-shadow">
               <div class="v-shadow__content">
